[tool.poetry]
name = "terratool"
version = "0.1.0"
description = ""
authors = ["evan <evan.c.straub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.13.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
